--- a/TSEWATCH/src/main/resources/Home.fxml
+++ b/TSEWATCH/src/main/resources/Home.fxml
@@ -130,7 +130,7 @@
                         <FontAwesomeIconView fill="WHITE" glyphName="WRENCH" size="13" />
                      </graphic>
                   </JFXButton>
-                  <JFXButton fx:id="btn_options" alignment="CENTER" contentDisplay="GRAPHIC_ONLY" layoutX="4.0" layoutY="493.0" onAction="#handleButtonAction" prefHeight="34.0" prefWidth="41.0" text="Dashboard" textFill="WHITE" AnchorPane.bottomAnchor="14.0">
+                  <JFXButton fx:id="btn_github" alignment="CENTER" contentDisplay="GRAPHIC_ONLY" layoutX="4.0" layoutY="493.0" onAction="#handleButtonAction" prefHeight="34.0" prefWidth="41.0" text="Dashboard" textFill="WHITE" AnchorPane.bottomAnchor="14.0">
                      <graphic>
                         <FontAwesomeIconView fill="WHITE" glyphName="QUESTION" />
                      </graphic>
@@ -308,58 +308,6 @@
             </Pane>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="rapport_pane" layoutX="241.0" prefHeight="541.0" prefWidth="800.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="241.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <HBox layoutX="270.0" layoutY="88.0" spacing="15.0">
-               <children>
-                  <Label text="Axe de veille: ">
-                     <graphic>
-                        <MaterialDesignIconView glyphName="OWL" size="20" />
-                     </graphic>
-                     <font>
-                        <Font name="System Bold" size="15.0" />
-                     </font>
-                  </Label>
-                  <JFXComboBox fx:id="page_report_veilleList" prefHeight="20.0" prefWidth="136.0" />
-               </children>
-            </HBox>
-            <TableView fx:id="resultTableView" layoutX="141.0" layoutY="137.0" prefHeight="304.0" prefWidth="537.0">
-              <columns>
-                <TableColumn fx:id="colDate" prefWidth="170.0" text="Date">
-                     <graphic>
-                        <MaterialDesignIconView glyphName="CALENDAR_CHECK" size="20" />
-                     </graphic>
-                  </TableColumn>
-                <TableColumn fx:id="colTitre" minWidth="180.0" prefWidth="312.0" text="Titre">
-                     <graphic>
-                        <MaterialDesignIconView glyphName="EDGE" size="15" />
-                     </graphic>
-                  </TableColumn>
-                  <TableColumn fx:id="colSelect" maxWidth="45.0" minWidth="45.0" prefWidth="45.0" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-            <HBox layoutX="567.0" layoutY="451.0" spacing="12.0">
-               <children>
-                  <JFXButton fx:id="btn_refresh" onAction="#handleButtonAction" text=" ">
-                     <graphic>
-                        <MaterialDesignIconView glyphName="REFRESH" size="25" wrappingWidth="33.0" />
-                     </graphic>
-                  </JFXButton>
-                  <JFXButton fx:id="btn_rapport_nouveau" onAction="#handleButtonAction" ripplerFill="#131bb9" text="Nouveau Rapport" textFill="WHITE">
-                     <graphic>
-                        <MaterialDesignIconView glyphName="FILE" size="25" />
-                     </graphic>
-                  </JFXButton>
-               </children>
-            </HBox>
-            <Pane layoutX="65.0" layoutY="25.0" opacity="0.8" prefHeight="551.0" prefWidth="24.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <Pane layoutX="172.0" layoutY="21.0" opacity="0.5" prefHeight="12.0" prefWidth="150.0" style="-fx-background-color: #0747A6;" AnchorPane.leftAnchor="700.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <Pane layoutX="29.0" layoutY="26.0" prefHeight="12.0" prefWidth="860.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-         </children>
-      </AnchorPane>
       <AnchorPane fx:id="diffusion_pane" layoutX="241.0" prefHeight="541.0" prefWidth="800.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="242.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox layoutX="211.0" layoutY="61.0">
@@ -503,6 +451,57 @@
                   </HBox>
                </children>
             </Pane>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="rapport_pane" layoutX="241.0" prefHeight="541.0" prefWidth="800.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="241.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <HBox layoutX="270.0" layoutY="88.0" spacing="15.0">
+               <children>
+                  <Label text="Axe de veille: ">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="OWL" size="20" />
+                     </graphic>
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <JFXComboBox fx:id="page_report_veilleList" prefHeight="20.0" prefWidth="136.0" />
+               </children>
+            </HBox>
+            <TableView fx:id="resultTableView" layoutX="141.0" layoutY="137.0" prefHeight="304.0" prefWidth="537.0">
+              <columns>
+                <TableColumn fx:id="colDate" prefWidth="170.0" text="Date">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="CALENDAR_CHECK" size="20" />
+                     </graphic>
+                  </TableColumn>
+                <TableColumn fx:id="colTitre" minWidth="180.0" prefWidth="312.0" text="Titre">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="EDGE" size="15" />
+                     </graphic>
+                  </TableColumn>
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+            <HBox layoutX="567.0" layoutY="451.0" spacing="12.0">
+               <children>
+                  <JFXButton fx:id="btn_refresh" onAction="#handleButtonAction" text=" ">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="REFRESH" size="25" wrappingWidth="33.0" />
+                     </graphic>
+                  </JFXButton>
+                  <JFXButton fx:id="btn_rapport_nouveau" onAction="#handleButtonAction" ripplerFill="#131bb9" text="Nouveau Rapport" textFill="WHITE">
+                     <graphic>
+                        <MaterialDesignIconView glyphName="FILE" size="25" />
+                     </graphic>
+                  </JFXButton>
+               </children>
+            </HBox>
+            <Pane layoutX="65.0" layoutY="25.0" opacity="0.8" prefHeight="551.0" prefWidth="24.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Pane layoutX="172.0" layoutY="21.0" opacity="0.5" prefHeight="12.0" prefWidth="150.0" style="-fx-background-color: #0747A6;" AnchorPane.leftAnchor="700.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Pane layoutX="29.0" layoutY="26.0" prefHeight="12.0" prefWidth="860.0" style="-fx-background-color: #0747A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
    </children>
